Cambiada incompatibilidad de método